--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@
     width: 20%;
     max-width: 150px;
     margin-top: 1rem;
+    margin-bottom: 1rem;
     padding: .3rem;
     cursor: pointer;
 }
